--- a/index.html
+++ b/index.html
@@ -8,5 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <ul>
+        <li><a href="recipes/swedish-pastry.html">Swedish Pastry</a></li>
+        <li><a href="recipes/french-macarons.html">French Macarons</a></li>
+        <li><a href="recipes/chocolate-chip-cookie.html">Chocolate Chip Cookie</a></li>
+    </ul>
 </body>
 </html>
