Added ingridients and directions content

--- a/recipes/swedish-pastry.html
+++ b/recipes/swedish-pastry.html
@@ -7,6 +7,35 @@
     <title>Odin Recipes | Swedish Pastry</title>
 </head>
 <body>
+    
     <h1>Swedish Pastry</h1>
+
+    <h3>Ingredients</h3>
+    <ul>
+        <li>½ cup butter</li>
+        <li>1 cup all-purpose flour</li>
+        <li>¼ teaspoon butter flavored extract</li>
+        <li>2 tablespoons water</li>
+        <li>1 cup water</li>
+        <li>½ cup butter</li>
+        <li>¼ teaspoon butter flavored extract</li>
+        <li>1 cup all-purpose flour</li>
+        <li>3 eggs </li>
+        <li>1 teaspoon almond extract</li>
+        <li>1 cup confectioners' sugar</li>
+        <li>½ teaspoon almond extract</li>
+        <li>¼ teaspoon butter flavored extract</li>
+        <li>1 tablespoon milk</li>
+    </ul>
+
+    <h3>Directions</h3>
+    <ol>
+        <li>Preheat an oven to 350 degrees F (175 degrees C).</li>
+        <li>Cut 1/2 cup butter into 1 cup flour with a knife or pastry blender in a bowl until the mixture resembles coarse crumbs. Stir in 1/4 teaspoon butter extract. Add the water a tablespoon at a time, tossing with a fork, until the flour mixture is moistened. Press mixture onto the bottom of a 10x13-inch baking sheet.</li>
+        <li>Bring 1 cup water, 1/2 cup butter, and 1/2 teaspoon butter extract to a boil in a saucepan over medium-high heat. Remove from heat, then beat in 1 cup flour. Beat in eggs one at a time until blended. Stir in 1 teaspoon almond extract, and pour over crust.</li>
+        <li>Bake in the preheated oven until golden brown, about 55 minutes.</li>
+        <li>Meanwhile, mix the confectioners' sugar, 1/2 teaspoon almond extract, 1/4 teaspoon butter extract, and 1 tablespoon milk in a bowl until smooth. Spread mixture over the hot pastry.</li>
+    </ol>
+
 </body>
 </html>
