--- a/recipes/chocolate-chip-cookie.html
+++ b/recipes/chocolate-chip-cookie.html
@@ -9,7 +9,7 @@
 <body>
 
     <h1>Chocolate Chip Cookie</h1>
-
+    <img src="../images/chocolate-chip-cookies.jfif" alt="Chocolate Chip Cookies" width="600" height="400">
     <h3>Ingredients</h3>
     <ul>
         <li>2 cups all-purpose flour</li>
@@ -32,6 +32,6 @@
         <li>Bake in the preheated oven until golden brown, about 55 minutes.</li>
         <li>Bake for 15 to 17 minutes in the preheated oven, or until the edges are lightly toasted. Cool on baking sheets for a few minutes before transferring to wire racks to cool completely.</li>
     </ol>
-    
+
 </body>
 </html>
