--- a/recipes/french-macarons.html
+++ b/recipes/french-macarons.html
@@ -9,7 +9,7 @@
 <body>
 
     <h1>French Macarons</h1>
-
+    <img src="../images/french-macarons.webp" alt="French Macarons" width="300" height="400">
     <h3>Ingredients</h3>
 
     <h4>Macarons:</h4>
@@ -38,6 +38,6 @@
         <li>Beat butter, 2/3 cup confectioners' sugar, and vanilla extract with an electric mixer until creamy and thick, about 10 minutes. Transfer filling to a piping bag fitted with a round tip.</li>
         <li>Pipe a small amount of filling onto the center of 1 macaron; top with another macaron and press gently to sandwich the filling between the two.</li>
     </ol>
-    
+
 </body>
 </html>
