--- a/recipes/swedish-pastry.html
+++ b/recipes/swedish-pastry.html
@@ -7,9 +7,9 @@
     <title>Odin Recipes | Swedish Pastry</title>
 </head>
 <body>
-    
-    <h1>Swedish Pastry</h1>
 
+    <h1>Swedish Pastry</h1>
+    <img src="../images/swedish-pastry.webp" alt="Swedish Pastry">
     <h3>Ingredients</h3>
     <ul>
         <li>½ cup butter</li>
