--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="images/odin-chef.jpg" alt="Viking Chef Image" width="400" height="500">
     <ul>
         <li><a href="recipes/swedish-pastry.html">Swedish Pastry</a></li>
         <li><a href="recipes/french-macarons.html">French Macarons</a></li>
