Added 'Go back' link

--- a/recipes/chocolate-chip-cookie.html
+++ b/recipes/chocolate-chip-cookie.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+    <a href="../index.html">Go back</a>
     <h1>Chocolate Chip Cookie</h1>
     <img src="../images/chocolate-chip-cookies.jfif" alt="Chocolate Chip Cookies" width="600" height="400">
     <h3>Ingredients</h3>
