--- a/recipes/swedish-pastry.html
+++ b/recipes/swedish-pastry.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+    <a href="../index.html">Go back</a>
     <h1>Swedish Pastry</h1>
     <img src="../images/swedish-pastry.webp" alt="Swedish Pastry">
     <h3>Ingredients</h3>
