--- a/recipes/french-macarons.html
+++ b/recipes/french-macarons.html
@@ -8,6 +8,7 @@
 </head>
 <body>
 
+    <a href="../index.html">Go back</a>
     <h1>French Macarons</h1>
     <img src="../images/french-macarons.webp" alt="French Macarons" width="300" height="400">
     <h3>Ingredients</h3>
